# CloudRCA-Agent

./: .env.example  pyproject.toml  readme.md  requirements.txt
CloudRCA/app/: agent.py  config.py  evaluator.py  llm_client.py  main.py  scenario_loader.py  schemas.py  topology_graph.py
CloudRCA/app/eval/: __init__.py  ground_truth.py  matching.py  scoring.py
CloudRCA/app/graph/: __init__.py  builder.py  candidates.py  ingest.py  io.py  k8s_events.py  k8s_inventory.py  models.py  namespace_policy.py  pack.py  parsers.py  records.py  relationships.py  render.py  scoring.py  telemetry.py  tools.py  validate.py
CloudRCA/app/rca_agent/: __init__.py  audits.py  candidate_table.py  case.py  llm.py  models.py  nodes.py  pattern.py  prompts.py  quality.py  state.py  tournament.py  validators.py  workflow.py
CloudRCA/scripts/: agent_eval_all.py  download_scenarios.py  evaluate_result.py  graph_check_all.py  inspect_scenario.py  readme.md  run_scenario.py
